moduleLoader.js renamed to loader.ajaxify.js

--- a/tests/runner-requirejs.html
+++ b/tests/runner-requirejs.html
@@ -12,7 +12,7 @@
     <script type="text/javascript">
         require(
             [
-                "spec/moduleLoader"
+                "spec/loader.ajaxify"
             ],
             function (document){
                 jasmine.getEnv().addReporter(
