--- a/tests/runner.html
+++ b/tests/runner.html
@@ -9,8 +9,8 @@
     <script type="text/javascript" src="../lib/jquery.mockjax.js"></script>
     <script type="text/javascript" src="../lib/jasmine.js"></script>
     <script type="text/javascript" src="../lib/jasmine-html.js"></script>
-    <script type="text/javascript" src="../lib/moduleLoader.js"></script>
-    <script type="text/javascript" src="spec/moduleLoader.js"></script>
+    <script type="text/javascript" src="../lib/loader.ajaxify.js"></script>
+    <script type="text/javascript" src="spec/loader.ajaxify.js"></script>
 
 </head>
 <body>
