basic folder structure changed due using bower

--- a/tests/runner-requirejs.html
+++ b/tests/runner-requirejs.html
@@ -5,10 +5,10 @@
     <title>Jasmine Spec Runner</title>
 
     <link rel="stylesheet" type="text/css" href="styles/jasmine-1.3.1/jasmine.css">
-    <script type="text/javascript" src="../lib/jasmine.js"></script>
-    <script type="text/javascript" src="../lib/jasmine-html.js"></script>
+    <script type="text/javascript" src="../src/vendor/jasmine.js"></script>
+    <script type="text/javascript" src="../src/vendor/jasmine-html.js"></script>
 
-    <script data-main="bootstrap.js" src="../lib/require.js"></script>
+    <script data-main="bootstrap.js" src="../src/vendor/require.js"></script>
     <script type="text/javascript">
         require(
             [
