--- a/tests/runner.html
+++ b/tests/runner.html
@@ -5,11 +5,11 @@
     <title>Jasmine Spec Runner</title>
 
     <link rel="stylesheet" type="text/css" href="styles/jasmine-1.3.1/jasmine.css">
-    <script type="text/javascript" src="../lib/jquery-2.0.1.min.js"></script>
-    <script type="text/javascript" src="../lib/jquery.mockjax.js"></script>
-    <script type="text/javascript" src="../lib/jasmine.js"></script>
-    <script type="text/javascript" src="../lib/jasmine-html.js"></script>
-    <script type="text/javascript" src="../lib/loader.ajaxify.js"></script>
+    <script type="text/javascript" src="../src/vendor/jquery-2.0.1.min.js"></script>
+    <script type="text/javascript" src="../src/vendor/jquery.mockjax.js"></script>
+    <script type="text/javascript" src="../src/vendor/jasmine.js"></script>
+    <script type="text/javascript" src="../src/vendor/jasmine-html.js"></script>
+    <script type="text/javascript" src="../src/loader.ajaxify.js"></script>
     <script type="text/javascript" src="spec/loader.ajaxify.js"></script>
 
 </head>
